--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h2 class='posabs' onclick="restart()" id='restart'>🔄</h2>
         <div class='abs'>
-            <h1>Play Tic-tac-toe online<span class='mini'>v.5.6</span></h1>
+            <h1>Play Tic-tac-toe AI online<span class='mini'>v.5.6</span></h1>
         </div>
-        <!--♔♕♗♘♙♚♛♝♞♟♖♜⛂⛀ AI IN PROGRESS-->
+        <!--♔♕♗♘♙♚♛♝♞♟♖♜⛂⛀-->
         <table id='table'>
             <tr>
                 <td class='white' id='11' onclick="addTic(this)"></td>
@@ -28,7 +28,7 @@
                 <td class='white' id='33' onclick="addTic(this)"></td>
             </tr>
         </table>
-        <div class='abs'><h2 id='display'>X's turn</h2></div>
+        <div class='abs'><h2 id='display'>Your turn</h2></div>
         <div class='floor abs'>
             <p>By <a href='' class='ss' onmouseover="bluish()">YanCo WebLabs</a>. Made with JS and <span>love</span></p>
         </div>
